<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">

    <!-- bluetooth  Pairing request dialog -->

    <LinearLayout
        android:id="@+id/Layout_pairing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_bg"
        android:orientation="vertical"
        android:weightSum="3" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pairing_request_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/big_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" 
            android:orientation="vertical"
	  	 >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pairing_info"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/big_font_size" />

            <TextView
                android:id="@+id/device_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:gravity="center"
                android:textSize="@dimen/big_font_size" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pairing_request_button"
            android:textColor="@color/textColor"
            android:textSize="@dimen/big_font_size" />
    </LinearLayout>

</FrameLayout>
   
