<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff09bfff"
        android:orientation="vertical" 
        android:visibility="gone">

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#ffffff"
            android:textSize="29sp" />

        <TextView
            android:id="@+id/welcome_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8dp"
            android:text="@string/welcome_content"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/into"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
      <LinearLayout
        android:id="@+id/Layout_welcome1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff09bfff"
        android:orientation="vertical" 
        android:visibility="visible">
          <TextView
            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
           
            android:textColor="#ffffff"
            android:textSize="29sp" />
       </LinearLayout>  
    </LinearLayout>
   
